# rialto-airflow

./: .gitignore  Capfile  Dockerfile  Gemfile  README.md  alembic.ini  compose.prod.yaml  compose.yaml  pull_request_template.md  pyproject.toml  requirements.txt
.autoupdate/: preupdate
.github/workflows/: test.yml
alembic/: env.py  orcid-integration-stats-seed.csv
alembic/versions/: 08f49e63532b_create_author_orcids_table.py  148d276f0f9c_remove_funder_list_columns_from_.py  292d33c40c89_add_title_and_author_list_names_to_publications.py  293211496971_change_publications_by_author_column_.py  34bd25e2696c_add_publisher_to_publications.py  4b7bdf4035f0_seed_full_historic_orcid_integration_.py  577d7f29ee54_create_publications_by_author_table.py  77f8f9b13935_add_first_and_last_name_to_author_orcids.py  85fa8f2e6ae5_add_journal_name_to_publications.py  a7b78175dd8b_add_existing_stats_to_orcid_integration_.py  ad15040c0085_create_orcid_integration_stats_table.py  b832bef1963f_drop_issn_column_from_reports.py  b9d9af22500b_remove_full_name_column_from_author_.py  d8e2297c89bb_publications_by_school_and_department.py  ef9157a6df79_drop_timestamp_columns.py  f47e769bc111_initialize_reports_db.py
alembic_rialto/: README  env.py
alembic_rialto/versions/: 25a6f0e78374_add_altmetric_json_column.py  53aa35d55767_initialize_rialto_db.py  5464c1bc83f7_add_distilled_at_to_publication.py  550b4eef1eeb_add_harvest_full_column.py  ad881a79ea4d_add_provenance_columns.py  cc4fc6468480_adding_harvest_table.py  e1d3bfbd9ffd_cascade_delete_pub_funder_association.py
config/: deploy.rb
config/deploy/: prod.rb  stage.rb
rialto_airflow/: .codecov.yml  cleanup.py  cli.py  database.py  distiller.py  google.py  google_drive.py  honeybadger.py  mais.py  snapshot.py  utils.py  validate.py  xcom.py
rialto_airflow/apc/: README.md  __init__.py
rialto_airflow/dags/: cleanup.py  google.py  harvest.py  harvest_incremental.py  publish_data_quality.py  publish_open_access.py  publish_orcid.py  publish_orcid_to_reports.py  publish_publications.py  publish_to_reports.py  publish_to_reports_incremental.py  website.py
rialto_airflow/distiller/: __init__.py  abstract.py  apc.py  author_names.py  author_orcids.py  citation_count.py  grant_ids.py  issue.py  journal_issn.py  journal_name.py  natural_key.py  open_access.py  pages.py  pub_year.py  publisher.py  title.py  types.py  utils.py  volume.py
rialto_airflow/funders/: 239_US_Federal_Funders_for_filter_with_ror.csv  README.md  __init__.py  dataset.py  linker.py  ror_grid_dataset.py
rialto_airflow/harvest/: authors.py  crossref.py  deduplicate.py  dimensions.py  distill.py  doi_sunet.py  openalex.py  pubmed.py  sul_pub.py  wos.py
rialto_airflow/harvest_incremental/: __init__.py  altmetric.py  authors.py  crossref.py  deduplicate.py  dimensions.py  distill.py  harvests.py  openalex.py  pubmed.py  sul_pub.py  wos.py
rialto_airflow/plugins/: site.py
rialto_airflow/publish/: data_quality.py  openaccess.py  orcid.py  publication.py  publication_utils.py  reports_database.py
rialto_airflow/publish/documentation/: publications_by_author_data_dictionary.csv  publications_by_department_data_dictionary.csv  publications_by_school_data_dictionary.csv  publications_data_dictionary.csv
rialto_airflow/schema/: harvest.py  reports.py  rialto.py
rialto_airflow/website/: __init__.py  builder.py  data.py
test/: conftest.py  test_alembic.py  test_apc.py  test_cleanup.py  test_cli.py  test_database.py  test_distiller.py  test_google.py  test_mais.py  test_snapshot.py  test_utils.py  test_validate.py  test_website.py  utils.py
test/data/: authors-data-quality.csv  authors_active.csv  authors_updated.csv  pubmed.jsonl
test/distiller/: conftest.py  test_abstract.py  test_apc.py  test_author_names.py  test_author_orcids.py  test_citation_count.py  test_grant_ids.py  test_issue.py  test_natural_key.py  test_open_access.py  test_pages.py  test_pub_year.py  test_publisher.py  test_title.py  test_types.py  test_volume.py
test/funders/: test_dataset.py  test_linker.py  test_ror_grid_dataset.py
test/harvest/: test_authors.py  test_contribs.py  test_crossref.py  test_deduplicate.py  test_dimensions.py  test_distill.py  test_openalex.py  test_pubmed.py  test_sul_pub.py  test_wos.py
test/harvest_incremental/: test_altmetric.py  test_authors.py  test_crossref.py  test_deduplicate.py  test_dimensions.py  test_distill.py  test_distill_conditional.py  test_harvest.py  test_openalex.py  test_pubmed.py  test_sul_pub.py  test_wos.py
test/publish/: conftest.py  data.py  test_data_quality.py  test_openaccess.py  test_orcid.py  test_publication.py  test_publication_utils.py  test_publications_by_author.py  test_publications_by_department.py  test_publications_by_school.py
