[project]
name = "rialto-airflow"

version = "0.1.0"

description = "Airflow app for harvesting data for open access analysis and research intelligence."

authors = [ {name = "Laura Wrubel", email = "lwrubel@stanford.edu"}, {name = "Ed Summers", email = "edsu@stanford.edu"}, {name = "Jacob Hill", email = "jacob.hill@stanford.edu"}]

# Aligned with what is defined in Dockerfile and CI
requires-python = "== 3.12.*" 

package-mode = false

dependencies = [
    "pandas",
    "requests",
    "requests_oauthlib",
    "python-dotenv",
    "dimcli",
    "polars>=1.2",
    "pyalex",
    "more-itertools",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=1.4.36,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"
markers = "mais_tests: Tests requiring MAIS access"

[dependency-groups]
dev = [
    "apache-airflow==2.10.4", # aligned with base Docker image
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rialto_airflow"]
